@@ -1,4 +1,4 @@
-# 2DGameEngine
+# 2DGameEngine (incomplete)
 
 A 2D game engine with Entity-Component-System (ECS) architecture made using SDL, GLM, Dear ImGui, Sol, Lua and the C++ programming language by following the course [C++ Game Engine Programming](https://pikuma.com/courses/cpp-2d-game-engine-development) by Gustavo Pezzi at [pikuma.com](https://pikuma.com).
 
